@@ -1,3 +1,8 @@
+2005-01-19  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/DefaultListSelectionModel.java
+	(clone): New method.
+
 2005-01-19  Mark Wielaard  <mark@klomp.org>
 
 	Reported by Martin Platter <motse@complang.tuwien.ac.at>
